--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,10 @@
 envlist = py38
 
 [testenv]
-deps = -rrequirements/pro.txt
+deps = 
+    -rrequirements.txt
+# XXX for tox 4.0 and above add pytest to deps
+#    pytest 
 setenv =
-    PYTHONPATH = $PWD/src/
+    PYTHONPATH = src/
 commands = pytest
